--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
 					<% end %>
 
 				</div>
-				<!-- 新規投稿部分（共通テンプレかな？） -->
+				<!-- 新規投稿部分（共通テンプレ？） -->
 				<%= render 'books/list', book: @book %>
 			</div>
 
