--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-			
 
+
+					<!-- 投稿一覧 -->
 			<div class="col-xs-9">
 				<h2>Users</h2>
 
@@ -25,6 +26,5 @@
 						</tbody>
 					<% end %>
 				</table>
-				
 			</div>
-			
+		
