--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,34 +5,7 @@
 
 		<div class="row">
 			<div class="col-xs-3">
-				<h2>User Info</h2>
-				<!-- ここにプロフィール画像 -->
-				<div class="profile-container">
-    					<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  
-						
-				</div>
-				
-				<table class="table">
-					<tbody>
-						<tr></tr>
-						<tr>
-							<th>name</th>
-							<th><%= @user.name %></th>
-						</tr>
-						<tr>
-							<th>introduction</th>
-							<th><%= @user.introduction %></th>
-						</tr>
-					</tbody>
-					
-				</table>
-				<!-- プロフィール編集ページへのリンク cssは後で -->
-				<div class="row">
-					<% if @user.id == current_user.id %>
-					<p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
-					<% end %>
-
-				</div>
+				<%= render 'users/cope', user: @user %>
 				<!-- 新規投稿部分（共通テンプレ？） -->
 				<%= render 'books/list', book: @book %>
 			</div>
