--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,16 @@
+<div class="body">
+	<div class="container">
+		<p id="notice"></p>
 
+		<div class="row">
+			<div class="col-xs-3">
+				<%= render 'users/cope', user: @user %>
+				<!-- 新規投稿部分（共通テンプレ？） -->
+				<%= render 'books/list', book: @book %>
+			</div>
 
-					<!-- 投稿一覧 -->
+			<!-- ログインユーザーの投稿一覧 -->
+
 			<div class="col-xs-9">
 				<h2>Users</h2>
 
@@ -27,4 +37,9 @@
 					<% end %>
 				</table>
 			</div>
+			
+		</div>
 		
+	</div>
+	
+</div>
