--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,57 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="body">
+	<div class="container">
+		<p id="notice"></p>
+
+		<div class="row">
+			<div class="col-xs-3">
+				<%= render 'users/cope', user: @user %>
+				<!-- 新規投稿部分（共通テンプレ？） -->
+				<%= render 'books/list', book: @book %>
+			</div>
+
+			<!-- ログインユーザーの投稿一覧 -->
+
+			<div class="col-xs-9">
+				<h2>Book detail</h2>
+
+				<table class="table table-hover table-inverse">
+					
+					<thead>
+						<tr>
+							<th></th>
+							<th>Title</th>
+							<th>Opinion</th>
+							<th colspan="3"></th>
+						</tr>
+					</thead>
+					<!-- 繰り返さない -->
+					
+						<tbody>
+							<tr>
+								<td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
+								
+								<td><%= @books.title %></td> 
+								
+								<td><%= @books.body %></td>
+
+								
+								<td>
+									
+								</td>
+
+								<td>
+									
+								</td>
+
+							</tr>
+						</tbody>
+					
+				</table>
+				
+			</div>
+			
+		</div>
+		
+	</div>
+	
+</div>
