--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,44 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="body">
+	<div class="container">
+		<p id="notice"></p>
+
+		<div class="row">
+			
+			<div class="col-md-6 col-md-offset-3">
+				<h1>Editing Books</h1>
+
+				<%= form_for(@book) do |f| %>
+
+					<% if @book.errors.any? %>
+						<h3><%= @book.errors.count %>errors prohibited this book from being saved:</h3>
+					<ul>
+						<% @book.errors.full_messages.each do |message| %>
+							<li><%= message %></li>
+						<% end %>
+					</ul>
+
+					<% end %>
+
+					<h4>Title</h4>
+					<%= f.text_field :title %>
+
+					<h4>Opinion</h4>
+					<%= f.text_area :body %>
+
+					<%= f.submit 'Update Book' %>
+
+				<% end %>
+
+				<%= link_to "Show", book_path(@book) %>
+
+							|
+
+				<%= link_to "Back", books_path %>
+			
+			</div>
+		
+		</div>
+
+	</div>
+	
+</div>
