--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,10 +28,10 @@
 					<% @books.each do |book| %>
 						<tbody>
 							<tr>
-								<td><%= attachment_image_tag User.find(book.user_id), :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
+								<td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
 								
 								
-								<td><%= book.title %></td> 
+								<td><%= link_to book.title, book_path(book) %></td> 
 
 								
 								<td><%= book.body %></td>
