--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,7 @@
 			<!-- ログインユーザーの投稿一覧 -->
 
 			<div class="col-xs-9">
-				<h2>Book detail</h2>
+				<h2>Books</h2>
 
 				<table class="table table-hover table-inverse">
 					
@@ -30,19 +30,16 @@
 							<tr>
 								<td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
 								
+								
 								<td><%= @books.title %></td> 
 								
 								<td><%= @books.body %></td>
-
 								
-								<td>
-									
-								</td>
-
-								<td>
-									
-								</td>
-
+								<% if @books.user == current_user %>
+								<td><%= link_to "edit", edit_book_path(@books) %></td>
+								
+								<td><%= link_to "削除", book_path(@books), method: :delete %></td>
+								<% end %>
 							</tr>
 						</tbody>
 					
