--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
 							<tr>
 								<td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
 								
-								<td><%= book.title %></td> 
+								<td><%= link_to book.title, book_path(book) %></td> 
 								
 								<td><%= book.body %></td>
 							</tr>
