--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,12 @@
 					<% @books.each do |book| %>
 						<tbody>
 							<tr>
-								<td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
+								<td>
+									<%= link_to user_path(book.user_id) do %>
+									<%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+									<% end %>
+								  </td>
+								
 								
 								
 								<td><%= link_to book.title, book_path(book) %></td> 
