--- a/app/views/users/_cope.html.erb
+++ b/app/views/users/_cope.html.erb
@@ -1,4 +1,4 @@
-<h2>User Info</h2>
+<h2>User info</h2>
 				<!-- ここにプロフィール画像 -->
 				<div class="profile-container">
     					<%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  
