--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,5 +1,5 @@
 
-<h1>NewBook</h1>
+<h1>New Book</h1>
 
 <%= form_for(book) do |f|  %>
 <!-- ここにエラーを書く？ -->
@@ -18,6 +18,6 @@
 <h4>Opinion</h4>
 <%= f.text_area :body %>
 
-<%= f.submit 'create' %>
+<%= f.submit 'Create Book' %>
 
 <% end %>
