--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,7 +45,7 @@
 								<% if @books.user == current_user %>
 								<td><%= link_to "edit", edit_book_path(@books) %></td>
 								
-								<td><%= link_to "削除", book_path(@books), method: :delete %></td>
+								<td><%= link_to "削除", book_path(@books), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
 								<% end %>
 							</tr>
 						</tbody>
