--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,10 +1,10 @@
 
-<h1>New Book</h1>
+<h1>New book</h1>
 
 <%= form_for(book) do |f|  %>
 <!-- ここにエラーを書く？ -->
 	<% if book.errors.any? %>
-		<h3>入力した内容にエラーが<%= book.errors.count %>件あります</h3>
+		<h3><%= book.errors.count %>errors prohibited this obj from being saved:</h3>
     <ul>
       <% book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
