--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="body">
 	<div class="container">
 		<p id="notice"></p>
-		<h2>User Info</h2>
+		<h2>User info</h2>
 
 		<%= form_for(@user) do |f| %>
 		
