--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,7 +30,7 @@
 								<td><%= attachment_image_tag users, :profile_image, :fill, 40, 40, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>  </td>
 								
 								<td><%= users.name %></td> 
-								<td><%= link_to "show", user_path(users.id) %></td>
+								<td><%= link_to "Show", user_path(users.id) %></td>
 								
 							</tr>
 						</tbody>
