--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
 			<h4>Opinion</h4>
 				<%= f.text_area :introduction %>
 	
-			<%= f.submit 'Update Book' %>
+			<%= f.submit 'Update User' %>
 		
 		<% end %>
 		
